--- a/html-files/secondary.html
+++ b/html-files/secondary.html
@@ -2,30 +2,44 @@
 <html lang="en" >
 <head>
     <meta charset="UTF-8">
+    <!-- Sets the width of the page to follow the screen-width of the device and zoom level when loaded-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--Define page title to appear on tab-->
     <title>ZhuoFan's Secondary School Life</title>
+    <!--Insert search keywords for search engine-->
     <meta name="keywords" content="ZhuoFan,sp,daaa,卓凡,ChenZhuofan,Chen,ZHUOFAN,CHEN">
+    <!---Set page icon to appear at tab-->
     <link rel="icon" href="../profilepic/profile.jpg"/>
+    <!---Set website description for search engine-->
     <meta name="description"  content="Personal Website | ZhuoFan | I am 17 years old this year.Currently a student studying in Singapore Polytechnic.I love to play badminton and to do coding<br>Click to know more about me:)">
     <meta name="name" content="ZhuoFan">
     <meta name="image" content="profile.jpg">
+    <!---Bootstrap 5 support--->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+   <!--Import common css throughout website-->
     <link href="../css/common.css" rel="stylesheet">
+    <!--Import page-specific css-->
     <link href="../css/secondary.css" rel="stylesheet">
+    <!--Import page-specific js-->
     <script src="../js/secondary.js"></script>
 </head>
+<!--Start of body-->
 <body>
+<!--Start of header-->
 <header>
     <nav id='nav' class="navbar py-4 navbar-expand-md navbar-light fixed-top bg-white">
+        <!--Remove the 20% gaps for navigation bar on page-->
         <div class="container-fluid">
+            <!-- Let profile picture to appear with page title-->
             <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2" style="height:30px;"  alt="ZhuoFan">ZhuoFan | Secondary School</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class=" navbar-nav me-auto mb-2 mb-md-0">
+                    <!-- Navigation Items-->
                     <li class="nav-item">
                         <a class="nav-link"  href="index.html">Home</a>
                     </li>
@@ -45,7 +59,7 @@
                         <a class="nav-link" href="feedback.html" >Feedback</a>
                     </li>
                 </ul>
-
+                <!--Search button-->
                 <form class="d-flex">
                     <img src="../searchbaricons/search.png" id="search" alt="search"/>
                 </form>
@@ -53,12 +67,15 @@
         </div>
     </nav>
 </header>
+<!--End of header-->
+<!--Start of search overlay configuration-->
 <div class="container-fluid searchbaranimation" id="searchbar">
     <div class="row ">
         <div class="col-12 ">
-
+            <!--On typing ,search matching-->
             <input type="text" id="sbar" onkeyup="searchfeature()" class="form-control" style="position:relative;top:30%;:500px;height:60px;outline:none;font-size: 40px;border:1px solid grey;border-radius:5px;" placeholder="Search..">
             <br>
+            <!--Display search result in table-->
             <div class="col-12 " style="position:relative;top:30%;">
                 <table class="table table-light" id="searchtable" style="border-collapse: separate;display:none;">
                     <tr><th onclick="window.location.href='about.html'" style="cursor:pointer;" scope="row">About Me</th></tr>
@@ -91,27 +108,35 @@
         </div>
     </div>
 </div>
+<!--Search function script-->
 <script>
+    /*Logic:At default,the list is hidden .create a function that use indexOf to check for matching ,if matching it will be ===0,
+    options matching will be list out by enable the display:css style .Else if not match, display:css style will be changed to none(ie list will not be
+    shown).If the user did not input anything ,the whole table will be hidden.This function will key running upon detecting that there is a input(onkeyup).
+     */
     function searchfeature(){
         var tables=document.getElementById("searchtable");
         var input=document.getElementById("sbar").value.toUpperCase();
         var li=tables.getElementsByTagName("tr");
         for (var l=0;l<li.length;l++){
-            if (li[l].textContent.toUpperCase().indexOf(input)===0){
+            if (li[l].textContent.toUpperCase().indexOf(input)===0){/* Check for matching*/
                 li[l].style.display="";
                 tables.style.display=""
             }else{
-                li[l].style.display="none";
+                li[l].style.display="none";/*If not found,hide*/
 
             }
             if (input===""){
-                tables.style.display="none"
+                tables.style.display="none"/*If user did not enter anything ,hide*/
             }
         }}
 </script>
+<!--This is the cover of page-->
+<!--Slideshow element-->
 <div class="container-fluid grey margintop textfly1" >
     <div class="container d-flex justify-content-center">
         <div id="carouselExampleCaptions" class="carousel slide" style="width:804px;box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;" data-bs-ride="carousel">
+           <!--Number of indicator-->
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -125,6 +150,7 @@
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="9" aria-label="Slide 10"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="10" aria-label="Slide 11"></button>
             </div>
+            <!--Captions for different image while slideshow-->
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="2000">
                     <img src="../secondaryschoolphoto/presentationcarousel/10742781328_IMG_7182.jpg" style="height:500px;" class="d-block w-100" alt="...">
@@ -207,22 +233,27 @@
             </button>
         </div>
     </div>
+
+    <!-- Center title of page with animation at start-->
     <div class="row textfly" >
         <div class=" text-center">
             <br>
             <br>
             <h1>Secondary School Experience</h1>
         </div>
+        <!--Find out more button-->
         <div class=" text-center">
             <p>Swipe to know more</p>
+            <!--Upon clicked ,slide to the first section-->
             <img  onclick="window.location.href='secondary.html#secreflection';" src="../svg/arrow-down-square.svg" alt="arrow" style="height:50px;cursor:pointer;">
         </div>
     </div>
 </div>
 
-
+<!--First section in Page-->
 <div id='secreflection' class="container margintop">
     <div class="row">
+        <!--For medium screen size and about ,2 element on same line .For small screen size (ie.phone),1 element per line-->
         <div class="col-md-6 col-sm-12">
 
     <h1>Some Words After <br><span class="typing" id="type" style="color:royalblue"></span><span style="color:royalblue" class="cursor">|</span> </h1>
@@ -230,13 +261,16 @@
 
         4 years is really fast, till today I could still remember the summer that we all studied hard in classes, trying to understand everything the teacher said and to put it into practice. I could also remember the nights when everyone was sleeping and we are trying to complete the practice papers that have never seemed to have an end….</p>
         </div>
+        <!-- Script for typing effect for subtitles in First section-->
 <script>
 
     var r = 0;
     var txt = "Graduation";
-    var speed = 300;
-
+/*  Logic: Create a function that launches a timer that print letter by letter every 300ms .
+Then create a monitor ,when user scroll to a section section,the function will be called
+ */
     function typeWriter() {
+
         var endtype= setInterval(function(){
 
             if (r < txt.length) {
@@ -260,20 +294,27 @@
 
     })
 </script>
+        <!--Corresponding images another half in First section-->
         <div class=" col-md-6 col-sm-12 text-end">
 <img src="../secondaryschoolphoto/kissclipart-graduation-vector-png-clipart-square-academic-cap-cb399ded5d6237b4.png" style="height: 300px;">
         </div>
 
     </div>
     </div>
+<!-- End of first section-->
+<!--Start of second section-->
+<!--Grey color section-->
 <div class="container-fluid margintop grey">
+    <!--enclose with a container-->
     <div class="container">
         <div class="row" id="learnertoday">
+            <!--text of section at center and occupy full line-->
             <div class="col-md-12 col-sm-12 text-center ">
                 <h1><span style="color:mediumpurple">Learner</span>  Today,<span style="color:orange"> Leader</span> Tomorrow</h1>
                 <p>In these 4 years, I think I have grown especially in terms of leadership. My school has transformed me into a leader, till today I am still really thankful to the teachers that have trusted me and given me the opportunity to lead. In 2017, as a Secondary 1 student, I was lucky to get selected to become a junior student councillor which enabled me to learn a lot of things like to take initiative, be more responsible, and speak confidently. I have taken all the morning duties and the events I am participating in seriously. I always get to learn more things as the debrief after every event has allowed me to reflect on things that I have not done so well which enable me to correct myself and be a better leader. In 2019, I was nominated and chosen to be part of the Executive Committee of the 15th Student Council. This means that I will have more responsibilities in hand. As an exco member, I have always tried my best to plan the events as detailed as possible and to execute them smoothly. Through the events I have planned and led, I have a further understanding of leadership skills.I knew more about the responsibility in me.Additionally,I also learn more about proposal making and how to be flexible when carrying out events. I learn to react fast to unexpected situations, I learn to take care of my teammates, I learn to listen to other people’s opinions. While planning and executing events, I also forged strong bonds with my fellow councillors.As a senior , I always tried my best to teach my junior everything I have learned just like what my seniors have taught me. Aside from my student council role, I am also a physics representative for 3 years, a geographic representative for 1 year, and a staff sergeant in NPCC.I am really thankful to the everyone that has trusted me.</p>
           <br><br>
             </div>
+            <!-- table of leadership development ,appear below text at center-->
             <div class="col-md-12 col-sm-12">
                 <table class="table table-hover table-bordered border-dark  table-responsive">
                     <thead>
@@ -340,8 +381,11 @@
         </div>
     </div>
 </div>
+<!--End of second section-->
+<!--Start of third section-->
 <div class="container margintop">
     <div class="row" id="lifelong">
+        <!--Photo slideshow component at left occupying half of the line for medium size screen,and full line for small screen-->
         <div class="col-md-6 col-sm-12">
             <section id="slider">
                 <input type="radio" name="slider" id="s1" checked>
@@ -352,19 +396,25 @@
                 <label for="s3" id="slide3"></label>
             </section>
         </div>
+        <!--Text at right occupying half of the line for medium size screen,and full line for small screen-->
         <div class="col-md-6 col-sm-12 text-end">
             <h1>Lifelong <span style="color:forestgreen">Friends</span></h1>
             <p>I am glad that through the 4 years I have met a group of friends that can be trusted. Whenever we have projects or activities that require multiple people, they will be the first ones to join me. During recess or after school, we will always hang out together in the library or the school canteen. I could still remember that it was these people that had to stay up until 2 am with me to finish work or projects together. Whenever I have any questions or needs any help, I am confident to say that they are there.We have even formed our group called the “Dunearn Executive Committee”, the name may sound weird but as you can see from the name, we hope that we can progress together as a whole and make our school proud. Well, although at the end of 4 years, we didn't manage to achieve something great but at least we tried. We have gone to a lot of competitions together (although most of them we get participation)but we enjoy working hard together for a common goal. To enrich our life in secondary school, we also go to the science center to be a volunteer regularly, till today, we have volunteered more like 150 hours in the science center.</p>
         </div>
     </div>
 </div>
+
+<!--End of third section-->
+<!--Start of forth section-->
 <div class="container-fluid margintop grey">
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12">
+                <!--Text at left occupying half of the line for medium size screen,and full line for small screen-->
                 <h1>Lastly,<span style="color:orangered">Conclusion</span></h1>
                 <p>In this school,I have gone through a lot of fun and meaningful events/projects like Geographic Investigation,Self Initial VIA Project,CNY Celebrations,SOOP program，Science and technology challenges and more.I have also had a lot of my first times, like my first time to dance, to speak in front of the whole school, lead on projects, going to a camp, etc. These are the things that I have never imagined in the past, I am thankful that Dunearn has allowed me to experience so many things and made me grown not only in terms of knowledge but also in character. If I were to choose my secondary school again, I am very sure that I will choose Dunearn again :)</p>
             </div>
+            <!--Photo at right occupying half of the line for medium size screen,and full line for small screen(next line)-->
             <div class="col-md-6 col-sm-12 text-end">
                 <img src="../secondaryschoolphoto/dunearnlogo.png" style="height:300px">
             </div>
@@ -373,20 +423,21 @@
 </div>
 
 
-
+<!--Toast,welcome message.-->
 <div class=" position-fixed bottom-0 end-0 p-3" style="z-index: 99;">
 
     <div class="toast" id="secwelcome" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
         <div class="toast-header">
+            <!--Header:Profile pic + name +time-->
             <img src="../profilepic/profile.jpg" style="width:25px;" class="rounded me-2" alt="...">
             <strong class="mr-auto">ZhuoFan</strong>
 
             <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
-
+<!--Button to dismiss toast-->
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close">
             </button>
         </div>
-
+<!--Message-->
         <div class="toast-body">
             Hello! Have fun viewing my secondary school experience.<br>Have a nice day!! :)
         </div>
