Move javascript from .html to .js (6/6)

--- a/html-files/about.html
+++ b/html-files/about.html
@@ -105,33 +105,7 @@
                 <p>Welcome to about me page ,know more about me ! :)</p>
                 <img  onclick="window.location.href='about.html#aboutmeover'" src="../svg/arrow-down-square.svg" alt="arrow" style="height:50px;cursor:pointer;">
             </div>
-            <script>
-                var currenttime=new Date();
-            var currenthour=currenttime.getHours();
-            var day=document.getElementById("photocontainer");
-            if (currenthour>=18){
-                document.getElementById("photo").style.backgroundColor="#fff7f4";
-                day.style.transform="rotate(0deg)";
-                console.log(day.style.transform);
-                day.style.animation="spinnight 4s ,3s alternate";
-                console.log(day.style.animation);
-                day.style.webkitAnimationFillMode="forwards";
-            }
-            var timegreet=document.getElementById("timegreeting");
-            if (currenthour<12){
-                timegreet.innerHTML+="Good Morning!"
-            }
-            if (currenthour>=12&&currenthour<18){
-                timegreet.innerHTML+="Good Afternoon!"
-            }
-            if (currenthour>=18&&currenthour<=19){
-                timegreet.innerHTML+="Good Evening!"
-            }
-            if (currenthour>19){
-                timegreet.innerHTML+="Good Night!"
-            }
-
-            </script>
+             <script src="../js/detecthouranimation.js"></script>
         </div>
 
     </div>
@@ -154,6 +128,7 @@
         </div>
     </div>
 </div>
+<script src="../js/textanimation.js"></script>
 <div class="container-fluid margintop grey" id="quotesection">
     <div class="container">
         <div class="row">
