--- a/html-files/index.html
+++ b/html-files/index.html
@@ -162,24 +162,104 @@
            <br>
        </div>
 <!--Unconfirmed div ,may consider changing in later date-->
-           <div class=" offset-1 col-11 container text-center">
-                       <div class="row text-center" >
-                           <div class="col-lg-3 col-sm-12" >
-                              <img id="secphoto1" src="../secondaryschoolphoto/IMG_20190204_101010.jpg" style="height:400px;width:330px;">
-                           </div>
-                           <div class="col-lg-3 col-sm-6 ">
-                               <img src="../secondaryschoolphoto/im.jpg" style="height:200px;width:330px;">
-                               <img src="../secondaryschoolphoto/1.jpg" style="height:200px;width:330px;">
-                           </div>
-                           <div class="col-lg-2 col-sm-6">
-                               <img src="../secondaryschoolphoto/school.jpg" style="height:200px;width:230px;">
-                               <img src="../secondaryschoolphoto/school3.jpg" style="height:200px;">
-                           </div>
-                           <div class="col-lg-3 col-sm-12">
-                               <img src="../secondaryschoolphoto/12.jpg" style="height:200px;">
-                               <img src="../secondaryschoolphoto/8.jpg" style="height:200px;">
+           <div class=" offset-1 col-11 container text-center d-flex justify-content-center">
+               <div id="carouselExampleCaptions" class="carousel slide carousel-fade" style="width:800px;box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;" data-bs-ride="carousel">
+                   <!--Number of indicator-->
+                   <div class="carousel-indicators">
+                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
+                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7" aria-label="Slide 8"></button>
+                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="8" aria-label="Slide 9"></button>
+                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="9" aria-label="Slide 10"></button>
+                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="10" aria-label="Slide 11"></button>
+                   </div>
+                   <!--Captions for different image while slideshow-->
+                   <div class="carousel-inner">
+                       <div class="carousel-item active" data-bs-interval="2000">
+                           <img src="../secondaryschoolphoto/presentationcarousel/10742781328_IMG_7182.jpg" style="height:500px;" class="d-block w-100" alt="...">
+                           <div class="carousel-caption d-none d-md-block">
+                               <h5>Secondary One Orientation Programme 2019</h5>
                            </div>
                        </div>
+                       <div class="carousel-item" data-bs-interval="2000">
+                           <img src="../secondaryschoolphoto/presentationcarousel/IMG_20210606_195424.jpg" style="height:500px;"  class="d-block w-100" alt="...">
+                           <div class="carousel-caption d-none d-md-block">
+                               <h5 style="color:black;">3 Opal Racial Harmony Day 2019</h5>
+                           </div>
+                       </div>
+                       <div class="carousel-item" data-bs-interval="2000">
+                           <img src="../secondaryschoolphoto/presentationcarousel/im.jpg" style="height:500px;"  class="d-block w-100" alt="...">
+                           <div class="carousel-caption d-none d-md-block">
+                               <h5>15th Student Council Investiture 2019</h5>
+
+                           </div>
+                       </div>
+                       <div class="carousel-item" data-bs-interval="2000">
+                           <img src="../secondaryschoolphoto/presentationcarousel/2019-07-02%2006.04.58%202079138951209552530_1490202012.jpg" style="height:500px;"  class="d-block w-100" alt="...">
+                           <div class="carousel-caption d-none d-md-block">
+                               <h5>15th Student Council Investiture 2019</h5>
+
+                           </div>
+                       </div>
+
+                       <div class="carousel-item" data-bs-interval="2000">
+                           <img src="../secondaryschoolphoto/presentationcarousel/fr.jpg"  style="height:500px;" class="d-block w-100" alt="...">
+                           <div class="carousel-caption d-none d-md-block">
+                               <h5>Chinese New Year Celebration Performance 2019</h5>
+                           </div>
+                       </div>
+                       <div class="carousel-item" data-bs-interval="2000">
+                           <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190204-WA0058.jpg"  style="height:500px;" class="d-block w-100" alt="...">
+                           <div class="carousel-caption d-none d-md-block">
+                               <h5>Chinese New Year Celebration Performance 2019</h5>
+                           </div>
+                       </div>
+                       <div class="carousel-item" data-bs-interval="2000">
+                           <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190117-WA0015.jpg"  style="height:500px;" class="d-block w-100" alt="...">
+                           <div class="carousel-caption d-none d-md-block">
+                               <h5>Secondary One Orientation Programme 2019 <br>Organising Committee</h5>
+                           </div>
+                       </div>
+                       <div class="carousel-item" data-bs-interval="2000">
+                           <img src="../secondaryschoolphoto/presentationcarousel/IMG_20190808_093801.jpg" style="height:500px;"  class="d-block w-100" alt="...">
+                           <div class="carousel-caption d-none d-md-block">
+                               <h5>National Day Celebration 2020</h5>
+                           </div>
+                       </div>
+
+                       <div class="carousel-item" data-bs-interval="2000">
+                           <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190125-WA0013%20(1).jpg"  style="height:500px;" class="d-block w-100" alt="...">
+                           <div class="carousel-caption d-none d-md-block">
+                               <h5>Dinner of Meet The Parent Session 2020</h5>
+                           </div>
+                       </div>
+                       <div class="carousel-item" data-bs-interval="2000">
+                           <img src="../secondaryschoolphoto/presentationcarousel/fr1.jpg" style="height:500px;" class="d-block w-100" alt="...">
+                           <div class="carousel-caption d-none d-md-block">
+                               <h5>Chinese New Year Celebration Performance 2019</h5>
+                           </div>
+                       </div>
+                       <div class="carousel-item" data-bs-interval="2000">
+                           <img src="../secondaryschoolphoto/presentationcarousel/689a1c2e-433b-4aab-8c74-7db72595ddfd.jpg"  style="height:500px;" class="d-block w-100" alt="...">
+                           <div class="carousel-caption d-none d-md-block">
+                               <h5>Student Leader Training Camp <br>Facilitator Committee</h5>
+                           </div>
+                       </div>
+                   </div>
+                   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                       <span class="visually-hidden">Previous</span>
+                   </button>
+                   <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                       <span class="visually-hidden">Next</span>
+                   </button>
+               </div>
 
            </div>
 </div>
