--- a/html-files/about.html
+++ b/html-files/about.html
@@ -21,7 +21,7 @@
 <header>
     <nav id='nav' class="navbar py-4 navbar-expand-md navbar-light fixed-top bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2" style="height:30px;"  alt="ZhuoFan">ZhuoFan | About Me &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"   alt="ZhuoFan">ZhuoFan | About Me &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -103,7 +103,7 @@
                 <br><br>
                 <h1><span id="timegreeting"></span></h1>
                 <p>Welcome to about me page ,know more about me ! :)</p>
-                <img  onclick="window.location.href='about.html#aboutmeover'" src="../svg/arrow-down-square.svg" alt="arrow" style="height:50px;cursor:pointer;">
+                <img  onclick="window.location.href='about.html#aboutmeover'" src="../svg/arrow-down-square.svg" alt="arrow" class="square">
             </div>
              <script src="../js/detecthouranimation.js"></script>
         </div>
@@ -113,7 +113,7 @@
 <div class="container margintop" id='aboutmeover'>
     <div class="row">
         <div class="col-sm-12 col-md-6">
-            <h1>Overview <span id='type'  style='color:royalblue;'></span><span class="cursor" style='color:royalblue'>|</span></h1>
+            <h1>Overview <span id='type'  class="royalblue"></span><span class="cursor royalblue" >|</span></h1>
             <p>I am ZhuoFan,17 years old this year. My full name is Chen ZhuoFan,陈卓凡. Since young, I have a deep interest in software-related stuff as I am quite attracted by the UI and the functionality of programs. I always wonder how these things ever work. Hence, I have started to go into android development when I was in Primary 6, throughout the years, I have learned a lot of skills and knowledge that allow me to embark on various android development projects like LineageOS and Remix Resurrection OS. In 2018, with groups of developers that have the same interest, we established a project called exthmUI which is a custom ROM based on LineageOS but with additional features by us. Through these projects, I have learned quite a lot of things. Aside from the new knowledge, I also learned to persevere while I met errors. In 2019, I have a friend that encouraged me to learn C languages. Hence, I have started learning C programming since then. I have read various books and watch videos about it and have tried to put what I learn into practice. Every time I manage to do something that I am not able to do in the past, I will feel kind of happy as I feel that I have progressed. This encourages me to keep digging into the C language. Now I can make some small programs using it.In 2021,during the long holiday after O'Level ,I have started my learning on JavaScript and HTML.</p>
         </div>
         <div class='col-sm-12 col-md-6 d-flex justify-content-end align-item-end'>
@@ -133,18 +133,18 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12">
-<img src="../aboutmephoto/use.jpg" alt="look at sky" id="photofly" class="textfly" style="height:500px;    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;">
+<img src="../aboutmephoto/use.jpg" alt="look at sky" id="photofly" class="textfly photoeffectabout" >
             </div>
             <div class="col-md-6 col-sm-12 text-end">
                 <div class="contain">
-                <h1><span style="color:orangered">Quote</span> And <span style="color:purple">Inspiration</span> </h1>
+                <h1><span class="orangered">Quote</span> And <span class="purplecolor">Inspiration</span> </h1>
                 <figure>
-                    <blockquote class="blockquote" style="font-size:14px;">
+                    <blockquote class="blockquote fontsize14">
                         <br>
                         <p>"Let your dreams be bigger than your fears and your actions be louder than your words."</p>
                         <p>"让梦想大于胆怯，让行动强于语言"</p>
                     </blockquote>
-                    <figcaption class="blockquote-footer" style="font-size:12px;">
+                    <figcaption class="blockquote-footer fontsize12" >
                         Extracted from <cite title="Source Title">Nicky Gumbel</cite>
                     </figcaption>
                 </figure>
@@ -158,7 +158,7 @@
 <div class="container margintop ">
     <div class="row" id="education">
         <div class="col-md-6 col-sm-12">
-            <h1><span style="color:darkcyan">Education</span> Background</h1>
+            <h1><span class="darkcyan">Education</span> Background</h1>
             <p>I am previously a student in Dunearn Secondary School and currently a student in Singapore Polytechnic </p>
         </div>
         <div class="col-md-6 col-sm-12 text-end">
@@ -200,7 +200,7 @@
     <div class="container" >
     <div class="row">
         <div class="col-md-12 col-sm-12 text-center" >
-            <h1><span style="color:goldenrod">Achievements</span> and <span style="color:brown">Certification</span></h1>
+            <h1><span class="golden">Achievements</span> and <span class="brown">Certification</span></h1>
             <p></p>
             <br><br>
         </div>
@@ -308,14 +308,6 @@
                     <td>Edusave</td>
                     <td>2017</td>
                 </tr>
-
-
-
-
-
-
-
-
                 </tbody>
             </table>
         </div>
@@ -378,13 +370,13 @@
 <div class="container margintop ">
     <div class="row" id="testimonial">
         <div class="col-sm-12 col-md-12 text-center">
-            <h1 style="color:slateblue">Testimonials</h1>
+            <h1 class="slateblue">Testimonials</h1>
             <p></p>
         </div>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card h-100">
-                    <img src="../testimonialpdf/sgc.png" class="card-img-top" style="height:50%;" alt="...">
+                    <img src="../testimonialpdf/sgc.png" class="card-img-top testimonial"  alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Testimonial 1</h5>
                         <p class="card-text">Written by Dunearn Secondary School</p>
@@ -413,7 +405,7 @@
 
             <div class="col">
                 <div class="card h-100">
-                    <img src="../testimonialpdf/test1.png" class="card-img-top" style="height:50%;" alt="...">
+                    <img src="../testimonialpdf/test1.png" class="card-img-top testimonial"  alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Testimonial 2</h5>
                         <p class="card-text">Written by Ms Sarah Chan</p>
@@ -441,7 +433,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="../testimonialpdf/test2.png" class="card-img-top" style="height:50%;" alt="...">
+                    <img src="../testimonialpdf/test2.png" class="card-img-top testimonial" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Testimonial 3</h5>
                         <p class="card-text">Written by Ms Chua Sock Sian</p>
@@ -469,7 +461,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="../testimonialpdf/test3.png" style="height:50%;" class="card-img-top" alt="...">
+                    <img src="../testimonialpdf/test3.png"  class="card-img-top testimonial" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Testimonial 4</h5>
                         <p class="card-text">Written by Mr Lee Kong Huat</p>
@@ -505,11 +497,11 @@
         <div class="row" id="contactme">
 
             <div class="col-12">
-                <h1><span style="color:slategrey">Contact</span> Me</h1>
+                <h1><span class="slategry">Contact</span> Me</h1>
                 <br>
             </div>
             <div class="  col-lg-12">
-                <div class="card mb-3" style="border:0;box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;">
+                <div class="card mb-3 contactbox">
                     <div class="row">
                         <div class="col-lg-7 col-sm-12 d-flex" >
                             <img src="../aboutmephoto/-42ab6edb1dae41de.jpg" class="img-fluid"  alt="...">
@@ -536,11 +528,11 @@
     </div>
 </div>
 
-<div class=" position-fixed bottom-0 end-0 p-3" style="z-index: 99;">
+<div class=" position-fixed bottom-0 end-0 p-3 zindex99" >
 
     <div class="toast" id="welcome" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
         <div class="toast-header">
-            <img src="../profilepic/profile.jpg" style="width:25px;" class="rounded me-2" alt="...">
+            <img src="../profilepic/profile.jpg" class="rounded me-2 toastprofile" alt="...">
             <strong class="mr-auto">ZhuoFan</strong>
 
             <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
